applications/base/home-assistant/home-assistant-endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant-1
  namespace: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "192.168.4.24"
